--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <!--    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">-->
-    <title>Pet Clinic</title>
+    <title>Pet Clinic Index</title>
 </head>
 
 <body>
