List all Vets on Vet index page. Closes #9.

--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,7 +5,26 @@
     <title>List of Vets</title>
 </head>
 <body>
-<h2>Veterinarians</h2>
+
+<!--/*@thymesVar id="vet" type="com.cadebe.petclinic.model.Vet"*/-->
+<h2 th:text="'List of Vets'">Owners List</h2>
+
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th style="width: 150px;">Id</th>
+        <th style="width: 150px;">First Name</th>
+        <th style="width: 150px;">Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet.id}">1</td>
+        <td th:text="${vet.firstName}">Joe</td>
+        <td th:text="${vet.lastName}">Buck</td>
+    </tr>
+    </tbody>
+</table>
 
 </body>
 </html>
