Apply master layout to Owner list page. Closes #15.

--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8"/>
     <title>List of Pet Owners</title>
@@ -9,7 +9,7 @@
 <!--/*@thymesVar id="owner" type="com.cadebe.petclinic.model.Owner"*/-->
 <h2 th:text="'List of Owners'">Owners List</h2>
 
-<table class="table table-striped">
+<table id="owners" class="table table-striped">
     <thead>
     <tr>
         <th style="width: 150px;">Id</th>
