Apply master layout to Vet list page. Closes #16.

--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8"/>
     <title>List of Vets</title>
@@ -9,7 +9,7 @@
 <!--/*@thymesVar id="vet" type="com.cadebe.petclinic.model.Vet"*/-->
 <h2 th:text="'List of Vets'">Owners List</h2>
 
-<table class="table table-striped">
+<table id="vets" class="table table-striped">
     <thead>
     <tr>
         <th style="width: 150px;">Id</th>
