--- a/pet-clinic-web/src/main/resources/templates/owners/ownerDetails.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/ownerDetails.html
@@ -50,7 +50,7 @@
                 <dd th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}"/>
                 </dd>
                 <dt>Type</dt>
-                <dd th:text="${pet.type}"/>
+                <dd th:text="${pet.petType}"/>
                 </dd>
             </dl>
         </td>
